force-app/main/default/objects/Visit__c/fields/Vehicle_Used__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Used__c</fullName>
    <label>Vehicle Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Used</valueSetName>
    </valueSet>
</CustomField>