force-app/main/default/objects/Visit__c/fields/Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date__c</fullName>
    <formula>DATEVALUE( Planned_Start_Time__c + (0.5/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>