force-app/main/default/objects/Visit__c/fields/Visit_Duration__c.field-meta.xml
<CustomField>
    <fullName>Visit_Duration__c</fullName>
    <formula>IF(
    AND(NOT(ISBLANK(Actual_Start_Time__c)), NOT(ISBLANK(Actual_End_Time__c))),
    TEXT(
        FLOOR((TIMEVALUE(Actual_End_Time__c) - TIMEVALUE(Actual_Start_Time__c)) * 1440)
    ) &amp; &apos; mins&apos;,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Duration</label>
    <type>Text</type>
</CustomField>