force-app/main/default/objects/Visit__c/fields/Visit_Output__c.field-meta.xml
<CustomField>
    <fullName>Visit_Output__c</fullName>
    <label>Visit Output</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Visit_Output</valueSetName>
    </valueSet>
</CustomField>