force-app/main/default/objects/Visit__c/fields/Visit_Participant_1__c.field-meta.xml
<CustomField>
    <fullName>Visit_Participant_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Working With 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>