force-app/main/default/objects/Visit__c/fields/Visit_Participant_2__c.field-meta.xml
<CustomField>
    <fullName>Visit_Participant_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Working With 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>