force-app/main/default/objects/Visit__c/fields/Visit_Participant_3__c.field-meta.xml
<CustomField>
    <fullName>Visit_Participant_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Working With 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visits2</relationshipName>
    <type>Lookup</type>
</CustomField>