force-app/main/default/objects/Visit__c/fields/Warranty_Visit__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranty Visit</label>
    <type>Checkbox</type>
</CustomField>