force-app/main/default/objects/Visit__c/validationRules/To_Stop_Status_Changing.validationRule-meta.xml
<ValidationRule>
    <fullName>To_Stop_Status_Changing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE( Status__c ), &quot;Completed&quot;),
    ISPICKVAL(Status__c , &quot;Planned&quot;)
) 
||
   AND(ISPICKVAL(PRIORVALUE(Status__c ), &quot;In Progress&quot;),
    ISPICKVAL(Status__c , &quot;Planned&quot;))</errorConditionFormula>
    <errorMessage>You cannot change the status directly.</errorMessage>
</ValidationRule>