force-app/main/default/objects/Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account1__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Status__c</columns>
    <columns>Planned_Start_Time__c</columns>
    <columns>Actual_Start_Time__c</columns>
    <columns>Actual_End_Time__c</columns>
    <columns>Daily_Log__c</columns>
    <columns>Location_Type__c</columns>
    <columns>Visit_Output__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ClockIn_Latitude__c</columns>
    <columns>Clockin_Longitude__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>