force-app/main/default/objects/Visit__c/listViews/Copy_of_Today.listView-meta.xml
<ListView>
    <fullName>Copy_of_Today</fullName>
    <columns>NAME</columns>
    <columns>Daily_Log__c</columns>
    <columns>Location_Type__c</columns>
    <columns>Visit_Output__c</columns>
    <columns>Previous_Visit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Owner_Name__c</columns>
    <columns>Distance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Created</label>
</ListView>