force-app/main/default/objects/Visit__c/listViews/Yesterday.listView-meta.xml
<ListView>
    <fullName>Yesterday</fullName>
    <columns>NAME</columns>
    <columns>Account1__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Status__c</columns>
    <columns>Planned_Start_Time__c</columns>
    <columns>Actual_Start_Time__c</columns>
    <columns>Actual_End_Time__c</columns>
    <columns>Daily_Log__c</columns>
    <columns>Location_Type__c</columns>
    <columns>Visit_Output__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Planned_Start_Time__c</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterday</label>
</ListView>